Mon Jul 21 20:54:47 CEST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

   * htlib/(malloc|error|lstat|stat|realloc).c: added for cross-compiling
   reasons (as suggested by automake)
   * htlib/error.h: ditto
   * db/acconfig.h: removed as suggested by autotools' new versions
   * configure.in: removed AC_PROG_RANLIB (overriden by AC_PROG_LIBTOOL)
   * updated as of rerun 'autoreconf -if'

Mon Jul 21 10:08:24 CEST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* Patch provided by Marco Nenciarini <mnencia@linux.it> has been
	  completely applied; the patch adds support for detection
	  of standard C++ library
	* all sources using <iostream.h> <fstream.h> <iomanip.h>: modified
	  to use standard ISO C++ library, if present
	* db/configure scripts: modified for autoconf 2.57

Mon Jul 21 09:59:16 CEST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* [.,*]/Makefile.in: regenerated by new automake against new configure.in
	* Makefile.config: now looking for the global configuration file
	  in the source directory

Mon Jul 21 09:49:22 CEST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* configure.in: completely rewritten, deprecated directives have
	  been removed and now version 2.57 is a prerequisite.
	* acinclude.m4: moved all the macros here
	* aclocal.m4, configure: regenerated by aclocal and autoconf
	* acconfig.h: removed as now it is deprecated
	* include/htconfig.h.in: removed, as 'config.h.in' is preferred
	  and auto-generated
	* config.[guess,sub]: updated with newer versions

Tue Jul  8 16:29:44 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/parser.cc (checkSyntax): Fixed boolean_syntax_errors
	  handling to work over multiple config files.

Mon Jul 7 00:41:55 CEST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

	* Updated to autoconf 2.57, libtool 1.5 and automake 1.7.5
	* removed acconfig.h files
	* autoconf include file is now include/config.h (for autoheader)