@@ -25,8 +25,6 @@ AC_CONFIG_SRCDIR([htdig/htdig.cc])
 AM_CONFIG_HEADER([include/config.h])
 AC_PREFIX_DEFAULT([/opt/www])
 
-AM_MAINTAINER_MODE
-
 # Initialize maintainer mode
 AM_MAINTAINER_MODE
 
@@ -80,8 +78,8 @@ AC_PROG_CXX
 AC_PROG_CC
 AC_PROG_CPP
 AC_AIX
+AM_PROG_LEX
 AC_PROG_YACC
-AC_PROG_LEX
 AC_PROG_INSTALL
 AC_PROG_LN_S
 AC_PROG_MAKE_SET
